<resources>
    <string name="app_name">SQLiteDemo</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="added_successfully">Added Successfully</string>
    <string name="error_enter_name">Enter Name</string>
    <string name="error_enter_mobile">Enter Mobile</string>
    <string name="enter_address">Enter Address</string>
    <string name="error_upload_profile">Upload Profile Picture</string>
    <string name="no_users">No Users</string>
    <string name="name">Name</string>
    <string name="mobile">Mobile</string>
    <string name="address">Address</string>
    <string name="upload_profile">UPLOAD PROFILE</string>
    <string name="submit">SUBMIT</string>
    <string name="all_users">ALL USERS</string>
</resources>
